# shinkan2024-trial

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
docker/nginx/: Dockerfile
docker/nginx/conf/: default.conf
docker/python/: Dockerfile
docs/: index.md
src/: app.py
src/static/css/: color.css  pygments.css  style.css
src/static/js/: script.js
src/static/md/: platform.md
src/templates/: hello.html  layout.html  materials-hp.html  materials.html  md_template.html  sample.html
