[tool.poetry]
package-mode = false
name = "shinkan2024-trial"
version = "0.1.0"
description = "Trial session for FairWind Shinkan 2024"
authors = ["FairWind Platform Development Team", "FairWind Website Devision"]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.3"
isort = "^5.13.2"
mypy = "^1.9.0"

[tool.ruff]
target-version = "py311"
exclude = [".venv"]
line-length = 80
indent-width = 4

[tool.ruff.lint]
ignore = ["D", "I", "COM812", "ISC001", "N999", "RUF012"]
select = ["ALL"]

[tool.isort]
profile = "black"
line_length = 80

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
warn_no_return = true
warn_unused_ignores = true
no_implicit_optional = true
disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
strict_optional = true
ignore_missing_imports = true
follow_imports = "normal"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
